--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,17 +3,20 @@
 - type: github
   icon: "fab fa-github"
 
+- type: linkedin
+  icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
+  url:  'https://br.linkedin.com/in/sasamuel' # Fill with your Linkedin homepage
+
 - type: twitter
   icon: "fa-brands fa-x-twitter"
-
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
 
 - type: rss
   icon: "fas fa-rss"
   noblank: true
 # Uncomment and complete the url below to enable more contact options
+# - type: email
+#   icon: "fas fa-envelope"
+#   noblank: true # open link in current tab
 #
 # - type: mastodon
 #   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
